gitops/proshop/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: proshop
  labels:
    app: backend
    app.kubernetes.io/part-of: proshop
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
